--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
 
     <meta charset="UTF-8">
-    <title>DIS Bookstore 2017</title>
+    <title>DØK Social</title>
 
 </head>
 <body class="homepage">
@@ -35,6 +35,7 @@
 
         </div>
 
+        <!-- Taken from https://www.w3schools.com/bootstrap/bootstrap_modal.asp -->
         <!-- Modal popup for create event-->
         <div id="createEventModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
