--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
 
     <meta charset="UTF-8">
-    <title>Shop - DIS Bookstore 2017</title>
+    <title>DØK Social</title>
 
 </head>
 <body>
@@ -21,6 +21,7 @@
 
             <div class="col-md-6">
 
+                <!-- Log in element -->
                 <div class="jumbotron jumbotron-fluid">
                     <div class="page-header">
                         <h1>Login</h1>
@@ -39,6 +40,7 @@
                 </div>
             </div>
 
+            <!-- Create user element -->
             <div class="col-md-6">
                 <div class="jumbotron jumbotron-fluid">
                     <div class="page-header">
