--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
 
     <meta charset="UTF-8">
-    <title>Checkout - DIS Bookstore 2017</title>
+    <title>DØK Social</title>
 
 </head>
 <body>
@@ -17,14 +17,17 @@
 
     <div class="row">
         <div class="col-md-12">
+
             <div class="col-md-3">
                 <div class="jumbotron jumbotron-fluid">
                     <h4>Profile:</h4>
                     <div class="profile-info"></div>
                 </div>
             </div>
+
             <div class="col-md-9">
                 <div class="jumbotron">
+
                     <!-- Events you created yourself -->
                     <div>
                         <h3>Events you created:</h3>
@@ -42,6 +45,7 @@
                             <tbody id="ownEventsTable"></tbody>
                         </table>
                     </div>
+
                     <!-- Events you have joined -->
                     <div>
                         <h3>Events you joined:</h3>
@@ -60,13 +64,13 @@
                         </table>
                     </div>
 
-
                 </div>
             </div>
 
         </div>
     </div>
 
+    <!-- Taken from https://www.w3schools.com/bootstrap/bootstrap_modal.asp -->
     <!-- Modal for edit event -->
     <div id="editEventModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
